--- a/OnlineShoppingXamarin/OnlineShoppingXamarin/View/HomePage.xaml
+++ b/OnlineShoppingXamarin/OnlineShoppingXamarin/View/HomePage.xaml
@@ -3,44 +3,36 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:view="clr-namespace:OnlineShoppingXamarin.View"
              mc:Ignorable="d"
              x:Class="OnlineShoppingXamarin.HomePage">
     <ContentPage.Content>
         <StackLayout>
-        <StackLayout VerticalOptions="Start" 
-                               HorizontalOptions="FillAndExpand" 
-                               Orientation="Horizontal"          
-                               Padding="10,5,10,5" BackgroundColor="GreenYellow">
-             <Label HorizontalOptions="StartAndExpand" Text="{Binding UserName}" VerticalOptions="Center"></Label>
-             <Image HorizontalOptions="End" Source="cart.png" WidthRequest="50" HeightRequest="50"></Image>
-        
-    </StackLayout>
+       
             <StackLayout>
+                <view:NavBar></view:NavBar>
                 <ListView x:Name="listView"
                     HorizontalOptions="FillAndExpand"
-                  
+                  HasUnevenRows="True"
                   IsPullToRefreshEnabled="True"
-                          ItemsSource="{Binding Products}"
+                  ItemsSource="{Binding Products}"
                   SelectedItem="{Binding SelectedProduct}"
-                  
-                   
-                  >
+                          ItemSelected="ListView_ItemSelected">
 
                     <ListView.ItemTemplate>
-                        <DataTemplate >
+                        <DataTemplate  >
                             <ViewCell >
                                 <StackLayout Orientation="Horizontal"
                                      HorizontalOptions="StartAndExpand"
-                                             
-                                             VerticalOptions="FillAndExpand" >
-                                    <Image Source="{Binding ImageUrl}"></Image>
-                                    <StackLayout VerticalOptions="FillAndExpand"
+                                             VerticalOptions="FillAndExpand">
+                                    <Image Source="{Binding ImageUrl}" WidthRequest="150" HeightRequest="200"/>
+                                    <StackLayout VerticalOptions="CenterAndExpand"
                                                  HorizontalOptions="FillAndExpand"
                                                 >
-                                        <Label Text="{Binding ProductName}"></Label>
-                                        <Label Text="{Binding Price}"></Label>
-                                        <Label Text="{Binding Quantity}"></Label>
-                                        <Label Text="{Binding Description}"></Label>
+                                        <Label Text="{Binding ProductName}" FontSize="Large"></Label>
+                                        <Label Text="{Binding Description}"
+                                               LineBreakMode="TailTruncation"></Label>
+                                        <Label Text="{Binding Price , StringFormat='{0:C}'}" FontSize="Large"></Label>
                                     </StackLayout>
                                 </StackLayout>
 
