--- a/OnlineShoppingXamarin/OnlineShoppingXamarin/View/CartPage.xaml
+++ b/OnlineShoppingXamarin/OnlineShoppingXamarin/View/CartPage.xaml
@@ -3,13 +3,70 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:view="clr-namespace:OnlineShoppingXamarin.View"
              mc:Ignorable="d"
              x:Class="OnlineShoppingXamarin.View.CartPage">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <view:NavBar></view:NavBar>
+
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="2*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Label Grid.Column="0"></Label>
+                <Label Grid.Column="1"></Label>
+                <Label Grid.Column="2" Text="Price" HorizontalTextAlignment="Center"></Label>
+                <Label Grid.Column="3" Text="Quantity" HorizontalTextAlignment="Center"></Label>
+            </Grid>
+          
+       
+        <ListView x:Name="CartlistView"
+                    HorizontalOptions="FillAndExpand"
+                  IsPullToRefreshEnabled="True"
+                  ItemsSource="{Binding Carts}"
+                  HasUnevenRows="True">
+                
+               
+
+                <ListView.ItemTemplate>
+                    <DataTemplate  >
+                        <ViewCell>
+                            <Grid>
+                                
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="2*" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                
+                                <Image Source="{Binding ImageUrl}" WidthRequest="100" HeightRequest="100" Grid.Column="0"/>
+                                <StackLayout HorizontalOptions="FillAndExpand" Grid.Column="1">
+                                    <Label Text="{Binding ProductId}" ></Label>
+                                    <Label Text="InStock" TextColor="Green"  />
+                                    <Label Text="Delete" ></Label>
+                                </StackLayout>
+                                <Label Text="{Binding Price , StringFormat='{0:C}'}"
+                                       Grid.Column="2" FontSize="Medium" VerticalTextAlignment="Center" />
+                                <Label Text="{Binding Quantity}" Grid.Column="3" FontSize="Medium" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" />
+                           
+                            </Grid>
+                        </ViewCell>
+
+                    </DataTemplate>
+
+                </ListView.ItemTemplate>
+
+            </ListView>
+            <Button HorizontalOptions="End" VerticalOptions="End" Text="Submit" 
+                    BackgroundColor="GreenYellow" Padding="40,0,40,0" Margin="0,0,20,20"></Button>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
