--- a/OnlineShoppingXamarin/OnlineShoppingXamarin/View/MainPage.xaml
+++ b/OnlineShoppingXamarin/OnlineShoppingXamarin/View/MainPage.xaml
@@ -17,6 +17,20 @@
                HorizontalOptions="FillAndExpand" BackgroundColor="White" x:Name="UserName" Text="{Binding UserName}" ></Entry>
         <Button Text="Login" BackgroundColor="Yellow" HorizontalOptions="FillAndExpand"
                 x:Name="Login" Command="{Binding LoginCommand}" IsEnabled="False" ></Button>
+
+        <ActivityIndicator IsRunning="{Binding IsLoading}"
+                         IsVisible="{Binding IsLoading}"
+                          HeightRequest="40"
+                          VerticalOptions="CenterAndExpand"
+                          HorizontalOptions="CenterAndExpand">
+            <ActivityIndicator.WidthRequest>
+                <OnPlatform x:TypeArguments="x:Double" iOS="100" Android="100" WinPhone="400" />
+            </ActivityIndicator.WidthRequest>
+            <ActivityIndicator.Color>
+                <OnPlatform x:TypeArguments="Color"
+                      iOS="#2499CE" WinPhone="#2499CE" />
+            </ActivityIndicator.Color>
+        </ActivityIndicator>
     </StackLayout>
 
 </ContentPage>
