--- a/OnlineShoppingXamarin/OnlineShoppingXamarin/View/CartPage.xaml
+++ b/OnlineShoppingXamarin/OnlineShoppingXamarin/View/CartPage.xaml
@@ -4,9 +4,16 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:view="clr-namespace:OnlineShoppingXamarin.View"
+             xmlns:super="clr-namespace:OnlineShoppingXamarin"
              mc:Ignorable="d"
-             x:Class="OnlineShoppingXamarin.View.CartPage">
+             x:Class="OnlineShoppingXamarin.View.CartPage"
+             x:Name="Cart">
+    <ContentPage.Resources>
+        <super:Converter x:Key="Converter"/>
+    </ContentPage.Resources>
+    
     <ContentPage.Content>
+        
         <StackLayout>
             <view:NavBar></view:NavBar>
 
@@ -31,7 +38,9 @@
                     HorizontalOptions="FillAndExpand"
                   IsPullToRefreshEnabled="True"
                   ItemsSource="{Binding Carts}"
-                  HasUnevenRows="True">
+                  HasUnevenRows="True"
+                      SelectedItem="{Binding SelectedCart}"
+                          ItemSelected="ListView_ItemSelected">
                 
                
 
@@ -46,12 +55,31 @@
                                     <ColumnDefinition Width="*" />
                                     <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
-                                
-                                <Image Source="{Binding ImageUrl}" WidthRequest="100" HeightRequest="100" Grid.Column="0"/>
+
+                                <Image Source="{Binding Product.ImageUrl}" WidthRequest="100" HeightRequest="100" Grid.Column="0"/>
                                 <StackLayout HorizontalOptions="FillAndExpand" Grid.Column="1">
-                                    <Label Text="{Binding ProductId}" ></Label>
-                                    <Label Text="InStock" TextColor="Green"  />
-                                    <Label Text="Delete" ></Label>
+                                    <Label Text="{Binding ProductName}" ></Label>
+                                    <Label Text="InStock" TextColor="Green" IsVisible="{Binding !Product.Quantity,
+                                           Converter={StaticResource Converter}}" />
+                                    <Label Text="OutStock" TextColor="Red" IsVisible="{Binding Product.Quantity,
+                                           Converter={StaticResource Converter}}" />
+                                    <Label >
+                                        <Label.FormattedText>
+                                            <FormattedString>
+                                                <Span Text="Delete"
+                                                   TextColor="Blue"
+                                                    TextDecorations="Underline">
+                                                    <Span.GestureRecognizers>
+                                                        <TapGestureRecognizer
+                                                            Command="{Binding Path=BindingContext.DeleteCommand,
+                                                            Source={x:Reference Cart}
+                                                            }" CommandParameter="{Binding .}"
+                                          />
+                                                    </Span.GestureRecognizers>
+                                                </Span>
+                                            </FormattedString>
+                                        </Label.FormattedText>
+                                    </Label>
                                 </StackLayout>
                                 <Label Text="{Binding Price , StringFormat='{0:C}'}"
                                        Grid.Column="2" FontSize="Medium" VerticalTextAlignment="Center" />
