--- a/OnlineShoppingXamarin/OnlineShoppingXamarin/View/HomePage.xaml
+++ b/OnlineShoppingXamarin/OnlineShoppingXamarin/View/HomePage.xaml
@@ -11,6 +11,19 @@
        
             <StackLayout>
                 <view:NavBar></view:NavBar>
+                <ActivityIndicator IsRunning="{Binding IsLoading}"
+                         IsVisible="{Binding IsLoading}"
+                          HeightRequest="40"
+                          VerticalOptions="CenterAndExpand"
+                          HorizontalOptions="CenterAndExpand">
+                    <ActivityIndicator.WidthRequest>
+                        <OnPlatform x:TypeArguments="x:Double" iOS="100" Android="100" WinPhone="400" />
+                    </ActivityIndicator.WidthRequest>
+                    <ActivityIndicator.Color>
+                        <OnPlatform x:TypeArguments="Color"
+                      iOS="#2499CE" WinPhone="#2499CE" />
+                    </ActivityIndicator.Color>
+                </ActivityIndicator>
                 <ListView x:Name="listView"
                     HorizontalOptions="FillAndExpand"
                   HasUnevenRows="True"
